added basic testing spec

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,3 +61,7 @@ logger.application=DEBUG
 
 mongodb.servers = ["localhost:27017"]
 mongodb.db = "torque"
+
+
+# define the location of elastic server
+es.server = "http://localhost:9200/"
